Updated products_menu.fxml and ProductsMenuManager.java